typo header items.js

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -45,8 +45,8 @@
 </head>
 <body>
     <div class="header">
-        <h1><%= category.name %> List</h1>
-        <p>Here are the items available in the inventory</p>
+        <h1><%= category.name %></h1>
+        <p>Here are the items available for this category</p>
     </div>
     <div class="container" id="items-container">
         <% items.forEach(item => { %>
